<resources>
    <string name="app_name">OpoTest</string>
    <string name="botonFlot">Boton flotante</string>

    <!-- Login -->
    <string name="inicio">Identifíquese para iniciar sesión</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="inicioSesion">Iniciar Sesión</string>

    <!--Nuevo usuario -->
    <string name="crearNuevoUsuario"><u>¿No tiene cuenta? Registrese ahora</u></string>
    <string name="inicioNuevoUsuario"><u>Rellene los campos para crear su usuario</u></string>
    <string name="btnGuardarUsuario">Terminar</string>

    <!--Test temas -->
    <string name="botonTemas">Test por temas</string>
    <string name="txtTituloPrelim">Titulo preliminar</string>
    <string name="txtTituloI">Titulo I. Derechos y deberes</string>
    <string name="txtTituloII">Titulo II. La Corona</string>
    <string name="txtTituloIII">Titulo III. Cortes Generales</string>
    <string name="txtTituloIV">Titulo IV. Gobierno y la admnistracion</string>
    <string name="txtTituloV">Titulo V. Relaciones Gobierno y Cortes generales</string>
    <string name="txtTituloVI">Titulo VI. Poder judicial</string>
    <string name="txtTituloVII">Titulo VII. Economia y hacienda</string>
    <string name="txtTituloVIII">Titulo VIII. Organizacion Territorial del Estado</string>
    <string name="txtTituloIX">Titulo IX. Tribunal Constitucional</string>
    <string name="txtTituloX">Titulo X. Reforma constitucional</string>
    <string name="txtTituloXI">Titulo XI. Disposiciones adicionales</string>

    <!--Test examen -->
    <string name="botonExamen">Examen</string>

    <!--Historial -->
    <string name="btnHistorial">Historial usuario</string>

    <!-- LO DE ABAJO CREO QUE NO ES UTIL -->

    <!--Test Preliminar -->
    <string name="txtPre">Tests sobre el Titulo Preliminar</string>
    <string name="tst1">Test 1</string>
    <string name="tst2">Test 2</string>
    <string name="tst3">Test 3</string>

    <string name="next">Siguiente pagina</string>
    <string name="letraA">A)</string>
    <string name="letraA2">B)</string>
    <string name="letraA3">C)</string>
    <string name="letraA4">D)</string>
    <string name="letraA5">SS)</string>

</resources>