<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/letraA"
        android:layout_width="35dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:gravity="right"
        android:text="@string/letraA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/letraA2"
        android:layout_width="35dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="right"
        android:text="@string/letraA2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letraA" />

    <TextView
        android:id="@+id/letraA3"
        android:layout_width="35dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:gravity="right"
        android:text="@string/letraA3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letraA2" />

    <TextView
        android:id="@+id/letraA4"
        android:layout_width="35dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="right"
        android:text="@string/letraA4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letraA3" />

    <TextView
        android:id="@+id/letraA5"
        android:layout_width="35dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="right"
        android:text="@string/letraA5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letraA4" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cargarPregunta"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="371dp"
        android:layout_height="329dp"
        android:layout_marginStart="60dp"
        android:onClick="comprobarRespuesta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113">

        <RadioButton
            android:id="@+id/respuesta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="comprobarRespuesta"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/respuesta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="comprobarRespuesta"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/respuesta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="comprobarRespuesta"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/respuesta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="comprobarRespuesta"
            android:text="RadioButton" />

        <CheckBox
            android:id="@+id/respuestaCorrecta"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="CheckBox" />
    </RadioGroup>

    <TextView
        android:id="@+id/correcto"
        android:layout_width="154dp"
        android:layout_height="57dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.226" />

</androidx.constraintlayout.widget.ConstraintLayout>