<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesion">

    <LinearLayout
        android:id="@+id/linearParte1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@mipmap/cabecera">

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@+id/linearParte1"

        android:id="@+id/linearParte2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center|center_horizontal"
            android:text="@string/inicio"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearParte2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputUsuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contraseña"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte4"
        android:layout_below="@+id/linearParte3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_login"
            android:drawableTint="#fff"
            android:onClick="iniciarSesion"
            android:text="@string/inicioSesion" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearParte5"
        android:layout_below="@+id/linearParte4"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtNuevoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:gravity="center|center_horizontal"
            android:onClick="crearUsuario"
            android:text="@string/crearNuevoUsuario"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>